--- a/rs-shop-app/package.json
+++ b/rs-shop-app/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "~12.1.0",
     "@ngrx/effects": "^12.4.0",
     "@ngrx/store": "^12.4.0",
+    "@types/yandex-maps": "^2.1.19",
     "popper.js": "^1.16.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
